--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,11 @@
   font-family: "poppins", sans-serif;
 
 }
-
+.ng-touched{
+  color: rgb(136, 17, 240);
+  font-size: 16px;
+  
+}
 .body{
   min-height: 100vh;
   display: flex;
