--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -41,7 +41,8 @@
                     <div class="col-md-4">
                         <div class="profile-work">
                             <p>Links</p>
-                            <a href="change to/agent">Assign Agent</a><br/>
+                          <a routerLink='/agent-assignment'>Assign Agent</a><br/>
+
 
                             <a href="change to/policy">Policy</a><br/>
 
