--- a/src/app/agent/agent-assignment/agent-assignment.component.html
+++ b/src/app/agent/agent-assignment/agent-assignment.component.html
@@ -1,43 +1,48 @@
-<div class="fixed z-10 inset-0 overflow-y-auto">
-  <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
-      <div class="fixed inset-0 transition-opacity">
-          <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+<body>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+  />
+
+  <link
+    rel="stylesheet prefetch"
+    href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+  />
+  <input
+    type="checkbox"
+    name="dialog_state"
+    id="dialog_state"
+    class="dialog_state"
+  />
+  <div id="dialog">
+    <label id="dlg-back" for="dialog_state"></label>
+    <div id="dlg-wrap">
+      <label id="dlg-close" for="dialog_state"
+        ><i class="icon ion-ios-close-empty"></i
+      ></label>
+      <h2 id="dlg-header">Are you sure?</h2>
+      <div id="dlg-content">
+       Please confirm that you would like to use a credit to select this customer
       </div>
-      <span class="hidden sm:inline-block sm:align-middle sm:h-screen"></span>
-      <div
-          class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6">
-          <div class="sm:flex sm:items-start">
-              <div
-                  class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-green-100 sm:mx-0 sm:h-10 sm:w-10">
-                  <svg class="h-6 w-6 text-green-600" stroke="currentColor" fill="none" viewBox="0 0 24 24">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
-                  </svg>
-              </div>
-              <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                  <h3 class="text-lg leading-6 font-medium text-gray-900">
-                     Agent Assignment
-                  </h3>
-                  <div class="mt-2">
-                      <p class="text-sm leading-5 text-gray-500">
-                         Do you want to try to help this customer?
-                      </p>
-                  </div>
-              </div>
-          </div>
-          <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
-              <span class="flex w-full rounded-md shadow-sm sm:ml-3 sm:w-auto">
-                  <button type="button"
-                      class="inline-flex justify-center w-full rounded-md border border-transparent px-4 py-2 bg-green-600 text-base leading-6 font-medium text-white shadow-sm hover:bg-green-500 focus:outline-none focus:shadow-outline-green transition ease-in-out duration-150 sm:text-sm sm:leading-5">
-                      Accept
-                  </button>
-              </span>
-              <span class="mt-3 flex w-full rounded-md shadow-sm sm:mt-0 sm:w-auto">
-                  <button type="button"
-                      class="inline-flex justify-center w-full rounded-md border border-gray-300 px-4 py-2 bg-white text-base leading-6 font-medium text-gray-700 shadow-sm hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5">
-                      Cancel
-                  </button>
-              </span>
-          </div>
+      <div id="dlg-prompt">
+        <div class="button positive">
+          <i class="icon ion-ios-checkmark-empty"></i> Yes, let's do it!
+        </div>
+        <div class="button">
+          <i class="icon ion-ios-close-empty"></i> No, I'll reconsider
+        </div>
       </div>
+    </div>
   </div>
-</div>
+  <main id="main" class="main_area">
+    <div class="center">
+      <label class="button" for="dialog_state"
+        ><i class="icon ion-ios-upload-outline"></i> Open the dialog</label
+      >
+    </div>
+    <div id="console"></div>
+  </main>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+  <script src="js/index.js"></script>
+</body>
