Agent Details Component lost in merge
re-implemented from another branch that i did not merge correctly

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,11 +4,10 @@
       <li><a routerLink="/dashboard">Home</a></li>
       <li><a href="#0">Placeholder</a></li>
       <li>
-        <a href="#0">Agents</a>
+        <a class="agentslist" href="#0">Agents</a>
         <ul>
-          <li><a href="#0">Laura</a></li>
-          <li><a href="#0">Walker</a></li>
-          <li><a href="#0">McKenna</a></li>
+          <li *ngFor="let agent of agents"><a (click)="navigateToAgentDetails(agent.id)">{{agent.first_name}} {{agent.last_name}}</a></li>
+
         </ul>
       </li>
       <li>
@@ -36,7 +35,7 @@
         <li><a (click)="onLogout()">Logout</a></li>
           }
         <li routerLink="/account"><a>Account</a></li>
-        
+
       </div>
     </ul>
   </nav>
