--- a/src/styles.css
+++ b/src/styles.css
@@ -9,11 +9,25 @@
   font-family: "poppins", sans-serif;
 
 }
-.ng-touched{
-  color: rgb(136, 17, 240);
-  font-size: 16px;
-  
+.input-container {
+  display: flex;
+  flex-direction: column;
 }
+
+.input-container input {
+  margin-bottom: 5px; /* Adjust spacing between input and error message */
+}
+
+.help-block {
+  color: rgb(240, 17, 17);
+  font-size: 12px;
+}
+.error-message{
+  color: red;
+  font-size: 12px;
+}
+
+
 .body{
   min-height: 100vh;
   display: flex;
