login error handling

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -58,7 +58,7 @@
                      loginForm.get('password')?.touched
                     "
                     class="help-block"
-                    >Enter your email</span
+                    >Enter your password</span
                   >
                   </div>
 
