--- a/src/app/agent/agent-details/agent-details.component.css
+++ b/src/app/agent/agent-details/agent-details.component.css
@@ -6,7 +6,7 @@ body{
 
   margin-top: 6%;
   margin-bottom: 3%;
-  border-radius: 0.5rem;
+  border-radius: 5px;
   background: #fff;
 }
 .agent-img{
@@ -41,7 +41,7 @@ body{
 }
 .profile-edit-btn{
   border: none;
-  border-radius: 1.5rem;
+  border-radius: 5px;
   width: 70%;
   padding: 2%;
   font-weight: 600;
