--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -32,7 +32,7 @@
                   class="nav-link active"
                   id="home-tab"
                   data-toggle="tab"
-                  href="#home"
+
                   role="tab"
                   aria-controls="home"
                   aria-selected="true"
@@ -65,9 +65,9 @@
               <app-agent-assignment></app-agent-assignment>
             }
 
-            <a href="change to/policy">Policy</a><br />
+   
 
-            <a href="chagne to open notepad">Notes</a><br />
+            <button href="CHANGE">Policy</button><br> Notes<br />
           </div>
         </div>
         <div class="col-md-8">
