--- a/src/app/features/customer/customer-details/customer-details.component.css
+++ b/src/app/features/customer/customer-details/customer-details.component.css
@@ -1,15 +1,26 @@
-body{
+body {
   background: -webkit-linear-gradient(left, #4c3bec, #00c6ff);
 }
-button{
+button {
   margin-bottom: 4px;
   padding: 3px;
-  color:#4c3bec ;
-  font-weight: 500;
+
   cursor: pointer;
-  border-radius: 5px;
+
+  background-color: #f0edf3;
+  border: none;
+  border-radius: 10px;
+  width: 70%;
+  padding: 2%;
+  font-weight: 600;
+  color: #6c757d;
+  cursor: pointer;
 }
-.emp-profile{
+.confirm-delete {
+  background-color: #c0bbc4;
+  color: red;
+}
+.emp-profile {
   padding: 2%;
 
   margin-top: 5%;
@@ -17,10 +28,10 @@ button{
   border-radius: 0.5rem;
   background: #fff;
 }
-.policy-img{
+.policy-img {
   text-align: center;
 }
-.policy-img img{
+.policy-img img {
   width: 70%;
   height: 100%;
 }
@@ -37,17 +48,16 @@ button{
 .policy-img .file input {
   position: absolute;
   opacity: 0;
-  right:-150px;
+  right: -150px;
   top: 0;
-
 }
-.profile-head h5{
+.profile-head h5 {
   color: #333;
 }
-.profile-head h6{
+.profile-head h6 {
   color: #0062cc;
 }
-.profile-edit-btn{
+.profile-edit-btn {
   border: none;
   border-radius: 10px;
   width: 70%;
@@ -56,50 +66,50 @@ button{
   color: #6c757d;
   cursor: pointer;
 }
-.proile-rating{
+.proile-rating {
   font-size: 12px;
   color: #818182;
   margin-top: 5%;
 }
-.proile-rating span{
+.proile-rating span {
   color: #495057;
   font-size: 15px;
   font-weight: 600;
 }
-.profile-head .nav-tabs{
-  margin-bottom:5%;
+.profile-head .nav-tabs {
+  margin-bottom: 5%;
 }
-.profile-head .nav-tabs .nav-link{
-  font-weight:600;
+.profile-head .nav-tabs .nav-link {
+  font-weight: 600;
   border: none;
 }
-.profile-head .nav-tabs .nav-link.active{
+.profile-head .nav-tabs .nav-link.active {
   border: none;
-  border-bottom:2px solid #0062cc;
+  border-bottom: 2px solid #0062cc;
 }
-.profile-work{
+.profile-work {
   padding: 14%;
   margin-top: -15%;
 }
-.profile-work p{
+.profile-work p {
   font-size: 12px;
   color: #818182;
   font-weight: 600;
   margin-top: 10%;
 }
-.profile-work a{
+.profile-work a {
   text-decoration: none;
   color: #495057;
   font-weight: 600;
   font-size: 14px;
 }
-.profile-work ul{
+.profile-work ul {
   list-style: none;
 }
-.profile-tab label{
+.profile-tab label {
   font-weight: 600;
 }
-.profile-tab p{
+.profile-tab p {
   font-weight: 600;
   color: #0062cc;
 }
