--- a/src/app/features/customer/view-customers/view-customers.component.css
+++ b/src/app/features/customer/view-customers/view-customers.component.css
@@ -1,6 +1,7 @@
-body {
+.body {
   margin-top: 20px;
   background: #eee;
+  background: -webkit-linear-gradient(left, #4c3bec, #fdfdfd);
 
 }
 .container {
