Work on Agent Assignment

--- a/src/app/agent/agent-details/agent-details.component.html
+++ b/src/app/agent/agent-details/agent-details.component.html
@@ -60,7 +60,7 @@
         <div class="col-md-4">
           <div class="profile-work">
             <p>Links</p>
-            <a href="">Customers</a><br />
+            <a routerLink='agents-customers' routerLinkActive="router-link-active" >Customers</a><br />
             <a href="">Policies</a><br />
             <a href="">Placeholder</a><br />
             <a href="">Notes</a><br />
