--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,7 +1,8 @@
-<div class="body">
-  <p>dashboard works!</p>
- 
-</div>
+<div class="body">@if(currentUser){<div class="body">
+  <p>{{currentUser}}</p>
+
+</div>}</div>
+
 
 
 
