--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <nav>
     <ul>
       <li><a routerLink="/dashboard">Home</a></li>
-      <li><a href="#0">Placeholder</a></li>
+      <li><a href="#0">What we do</a></li>
       @if(isLoggedIn()){  <li>
         <a class="agentslist" href="#0">Agents</a>
         <ul>
