--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -19,6 +19,7 @@ left:50%;
   animation: slide-in 1s ease-out;
   width: 100%;
   z-index: 1000;
+  cursor: pointer;
 
 
 }
@@ -36,7 +37,8 @@ ul {
     margin-right: 40px;
   }
   li {
-    font-weight: 500;
+    font-weight: 600;
+    font-size:large;
     border: 2px solid transparent;
     border-radius: 5px;
     padding: 15px;
