Create implement interceptors to outgoing requests

--- a/src/app/features/customer/customer-details/customer-details.component.html
+++ b/src/app/features/customer/customer-details/customer-details.component.html
@@ -59,8 +59,8 @@
         <div class="col-md-4">
           <div class="profile-work">
             <p>Links</p>
-            <button (click)="assignAgentToCustomer(customerId, agentId)">
-              Assign Agent</button
+            <button (click)="claimCustomer(customerId, agentId)">
+             Claim Customer</button
             ><br />
             <!-- @if(showAssignAgent){
             <app-agent-assignment></app-agent-assignment>
