--- a/src/app/agent/agent-assignment/agent-assignment.component.html
+++ b/src/app/agent/agent-assignment/agent-assignment.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="body">
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
@@ -45,4 +45,5 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
   <script src="js/index.js"></script>
-</body>
+
+</div>
