--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="class">
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -172,4 +172,4 @@
       </div>
     </div>
   </div>
-</body>
+</div>
