--- a/src/app/features/auth/sign-up/sign-up.component.html
+++ b/src/app/features/auth/sign-up/sign-up.component.html
@@ -96,7 +96,7 @@
                   </div>
                   <div class="input-box">
                     <i class="fas fa-user"></i>
-                    <select formControlName="state">
+                    <select formControlName="state" class="state-select" >
                       <option value="">Select your state</option>
                       <option
                         *ngFor="let abbreviation of states"
